--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(async)
 
 include($ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
 
+add_compile_definitions(SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_OFF)
 find_package(GTest CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 
@@ -14,11 +15,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB_RECURSE ASYNC_SOURCES src/*.cpp)
 file(GLOB_RECURSE ASYNC_HEADERS src/*.h)
 
-add_compile_options(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
-                    -fsanitize=leak)
+# add_compile_options(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
+# -fsanitize=leak)
+#
+# link_libraries(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
+# -fsanitize=leak spdlog::spdlog)
 
-link_libraries(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
-               -fsanitize=leak spdlog::spdlog)
+link_libraries(spdlog::spdlog)
 
 # set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS}")
 
@@ -43,5 +46,9 @@ target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest GTest::gtest_main
 
 target_link_libraries(${TEST_NAME} PRIVATE ${LIBRARY_NAME} spdlog::spdlog)
 
+target_compile_definitions(${TEST_NAME}
+                           PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_OFF)
 include(GoogleTest)
 gtest_discover_tests(${TEST_NAME})
+
+# add_subdirectory(${CMAKE_SOURCE_DIR}/benchmarks/)
