Work on the DSA part

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,11 +15,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB_RECURSE ASYNC_SOURCES src/*.cpp)
 file(GLOB_RECURSE ASYNC_HEADERS src/*.h)
 
-# add_compile_options(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
-# -fsanitize=leak)
+add_compile_options(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
+                    -fsanitize=leak)
 #
-# link_libraries(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
-# -fsanitize=leak spdlog::spdlog)
+link_libraries(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
+               -fsanitize=leak)
 
 link_libraries(spdlog::spdlog)
 
