--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,17 @@ find_package(spdlog CONFIG REQUIRED)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(ENABLE_TESTING ON)
+set(ENABLE_ASAN ON)
 
-add_compile_options(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
-                    -fsanitize=leak)
+if (${ENABLE_ASAN})
+    add_compile_options(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
+                        -fsanitize=leak)
 
-link_libraries(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
-               -fsanitize=leak)
+    link_libraries(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
+                   -fsanitize=leak)
+endif()
+
 
 link_libraries(spdlog::spdlog)
 
@@ -92,25 +97,30 @@ elseif (UNIX)
 endif()
 
 install(TARGETS ${LIBRARY_NAME} FILE_SET HEADERS)
-#
-# enable_testing()
-#
-# file(GLOB_RECURSE TEST_SOURCES tests/*.cpp)
-#
-# set(TEST_NAME "${PROJECT_NAME}_tests")
-# add_executable(${TEST_NAME} ${TEST_SOURCES})
-#
-# # target_precompile_headers(${TEST_NAME} PUBLIC src/pch.h)
-#
-# target_include_directories(${TEST_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/src/)
-# target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest GTest::gtest_main
-#                                            GTest::gmock GTest::gmock_main)
-#
-# target_link_libraries(${TEST_NAME} PRIVATE ${LIBRARY_NAME} spdlog::spdlog)
-#
-# target_compile_definitions(${TEST_NAME}
-#                            PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_OFF)
-# include(GoogleTest)
-# gtest_discover_tests(${TEST_NAME})
-#
-# # add_subdirectory(${CMAKE_SOURCE_DIR}/benchmarks/)
+
+
+if (${ENABLE_TESTING})
+    enable_testing()
+
+    file(GLOB_RECURSE TEST_SOURCES tests/*.cpp)
+
+    set(TEST_NAME "${PROJECT_NAME}_tests")
+    add_executable(${TEST_NAME} ${TEST_SOURCES})
+
+# target_precompile_headers(${TEST_NAME} PUBLIC src/pch.h)
+
+    target_include_directories(${TEST_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/src/)
+    target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest GTest::gtest_main
+                                               GTest::gmock GTest::gmock_main)
+
+    target_link_libraries(${TEST_NAME} PRIVATE ${LIBRARY_NAME} spdlog::spdlog)
+
+    target_compile_definitions(${TEST_NAME}
+                               PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_OFF)
+    include(GoogleTest)
+    gtest_discover_tests(${TEST_NAME})
+
+# add_subdirectory(${CMAKE_SOURCE_DIR}/benchmarks/)
+
+endif()
+
