--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,14 +16,14 @@ set(ENABLE_TESTING ON)
 set(ENABLE_ASAN ON)
 
 if (${ENABLE_ASAN})
+add_compile_options(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
+                    -fsanitize=leak)
 
+link_libraries(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
+               -fsanitize=leak)
 endif()
 
-# add_compile_options(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
-#                     -fsanitize=leak)
-#
-# link_libraries(-fsanitize=address -fno-sanitize=alignment -fsanitize=enum
-#                -fsanitize=leak)
+
 
 link_libraries(spdlog::spdlog)
 
